[gd_scene load_steps=31 format=2]

[ext_resource path="res://Assets/Themes/Titlemenuaddition.tres" type="Theme" id=1]
[ext_resource path="res://Assets/Fonts/Minecraft.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Graphics/Image/playpixel.png" type="Texture" id=3]
[ext_resource path="res://Scripts/ModificationWord.gd" type="Script" id=4]
[ext_resource path="res://Scripts/ModifiedWord.gd" type="Script" id=5]
[ext_resource path="res://Assets/Fonts/ITC Avant Garde Gothic LT Bold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Assets/Graphics/Image/cross.png" type="Texture" id=7]
[ext_resource path="res://Assets/Graphics/Image/littlecross.png" type="Texture" id=8]
[ext_resource path="res://Assets/Graphics/Image/playpixel2.png" type="Texture" id=9]
[ext_resource path="res://Assets/Fonts/arial_narrow_7.ttf" type="DynamicFontData" id=10]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform vec4 topleft:hint_color;
uniform vec4 topright:hint_color;
uniform vec4 bottomleft:hint_color;
uniform vec4 bottomright:hint_color;

void fragment() {
	vec2 uv_corner = vec3(UV, 0.0).xy;
	vec4 top = mix(topleft, topright, uv_corner.x);
	vec4 bottom = mix(bottomleft, bottomright, uv_corner.x);
	COLOR =  mix(top, bottom, uv_corner.y);
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/topleft = Color( 0.47451, 0.843137, 0.988235, 1 )
shader_param/topright = Color( 1, 0.968627, 0.478431, 1 )
shader_param/bottomleft = Color( 1, 0.968627, 0.478431, 1 )
shader_param/bottomright = Color( 0.627451, 0.807843, 0.827451, 1 )

[sub_resource type="StyleBoxFlat" id=66]
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.419608, 0.364706, 0.364706, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="ShaderMaterial" id=3]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.807843, 0.0823529, 0.0823529, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.807843, 0.0823529, 0.0823529, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.807843, 0.0823529, 0.0823529, 1 )

[sub_resource type="DynamicFont" id=7]
size = 26
outline_color = Color( 0.858824, 0.917647, 0.815686, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=68]
size = 26
font_data = ExtResource( 10 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.290196, 0.262745, 0.34902, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color( 0.294118, 0.498039, 0.635294, 0.6 )
shadow_size = 7

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.74902, 0.639216, 0.807843, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.639216, 0.592157, 0.333333, 1 )
corner_radius_top_left = 400
corner_radius_top_right = 450
corner_radius_bottom_right = 450
corner_radius_bottom_left = 350
corner_detail = 6

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.388235, 0.396078, 0.713726, 1 )
corner_radius_top_left = 400
corner_radius_top_right = 450
corner_radius_bottom_right = 450
corner_radius_bottom_left = 350
corner_detail = 6

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.843137, 0.847059, 0.682353, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.326339, 0.428711, 0.275899, 1 )
border_blend = true
corner_radius_top_left = 400
corner_radius_top_right = 450
corner_radius_bottom_right = 450
corner_radius_bottom_left = 350
corner_detail = 6

[sub_resource type="SpriteFrames" id=67]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 3 ), ExtResource( 9 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=60]
size = 42
outline_color = Color( 0.729412, 0.321569, 0.321569, 1 )
extra_spacing_top = 2
extra_spacing_bottom = -5
extra_spacing_char = -4
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=61]
default_font = SubResource( 60 )

[sub_resource type="StyleBoxFlat" id=62]
bg_color = Color( 0.752941, 0.0980392, 0.0980392, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.529412, 0.0588235, 0.0588235, 1 )
border_blend = true
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=63]
bg_color = Color( 0.529412, 0.0588235, 0.0588235, 1 )
border_color = Color( 0.795898, 0.120473, 0.120473, 1 )

[sub_resource type="StyleBoxFlat" id=64]
bg_color = Color( 0.756863, 0.321569, 0.321569, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.760742, 0.180528, 0.180528, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="SpriteFrames" id=65]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[node name="ModificationWord" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -173.0
margin_top = -155.0
margin_right = -173.0
margin_bottom = -155.0
script = ExtResource( 4 )

[node name="ColorRect" type="Panel" parent="."]
material = SubResource( 2 )
margin_right = 394.0
margin_bottom = 187.0
custom_styles/panel = SubResource( 66 )

[node name="exitButton" type="Button" parent="."]
visible = false
material = SubResource( 3 )
margin_left = 348.0
margin_top = -7.0
margin_right = 456.0
margin_bottom = 85.0
rect_scale = Vector2( 0.5, 0.5 )
theme = ExtResource( 1 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "X"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 13.0
margin_top = 22.0
margin_right = 315.0
margin_bottom = 96.0
custom_colors/default_color = Color( 0.239216, 0.258824, 0.294118, 1 )
custom_fonts/normal_font = SubResource( 7 )
visible_characters = 200
text = "Quel mot souhaitiez- vous Ã©crire ?"

[node name="ModifiedWord" type="LineEdit" parent="."]
margin_left = 27.0
margin_top = 102.0
margin_right = 366.0
margin_bottom = 170.0
custom_fonts/font = SubResource( 68 )
custom_styles/normal = SubResource( 8 )
align = 1
caret_blink = true
script = ExtResource( 5 )

[node name="Titleinputbutton" type="Button" parent="ModifiedWord"]
margin_left = 297.0
margin_top = 17.0
margin_right = 554.0
margin_bottom = 261.0
rect_scale = Vector2( 0.15774, 0.165754 )
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
text = " "
expand_icon = true

[node name="ArrowIcon" type="AnimatedSprite" parent="ModifiedWord/Titleinputbutton"]
modulate = Color( 0.921569, 0.933333, 0.933333, 1 )
position = Vector2( 122.804, 124.943 )
scale = Vector2( 2.41646, 2.37774 )
frames = SubResource( 67 )

[node name="Closebutton" type="Button" parent="."]
margin_left = 346.0
margin_top = -1.0
margin_right = 405.0
margin_bottom = 53.0
rect_scale = Vector2( 0.842175, 0.835281 )
theme = SubResource( 61 )
custom_styles/hover = SubResource( 62 )
custom_styles/pressed = SubResource( 63 )
custom_styles/normal = SubResource( 64 )

[node name="Crossicon" type="AnimatedSprite" parent="Closebutton"]
position = Vector2( 29.6851, 26.3384 )
scale = Vector2( 0.0929377, 0.08551 )
frames = SubResource( 65 )

[connection signal="pressed" from="exitButton" to="." method="_on_exitButton_pressed"]
[connection signal="text_changed" from="ModifiedWord" to="ModifiedWord" method="_on_ModifiedWord_text_changed"]
[connection signal="text_entered" from="ModifiedWord" to="." method="_on_ModifiedWord_text_entered"]
[connection signal="mouse_entered" from="ModifiedWord/Titleinputbutton" to="." method="_on_Titleinputbutton_mouse_entered"]
[connection signal="mouse_exited" from="ModifiedWord/Titleinputbutton" to="." method="_on_Titleinputbutton_mouse_exited"]
[connection signal="pressed" from="ModifiedWord/Titleinputbutton" to="." method="_on_Titleinputbutton_pressed"]
[connection signal="mouse_entered" from="Closebutton" to="." method="_on_Closebutton_mouse_entered"]
[connection signal="mouse_exited" from="Closebutton" to="." method="_on_Closebutton_mouse_exited"]
[connection signal="pressed" from="Closebutton" to="." method="_on_Closebutton_pressed"]
